...
        )

        RoundedInputText(
            modifier = modifier
                .fillMaxWidth()
                .padding(start = 32.dp, end = 32.dp, top = 32.dp)
               .testTag("rounded input text")
                      ,
            onValueChanged = {
                onValueChanged(it)
            },
            icon = R.drawable.outline_account_circle_24,
            text = text,
...
                modifier = modifier
                    .fillMaxWidth()
                    .height(16.dp)
                    .testTag("spacer 2")
            )
            Text(
                modifier = Modifier.testTag("error message"),
                text = errorMessage,
                style = MaterialTheme.typography.bodyMedium,
                textAlign = TextAlign.Center,
                color = MaterialTheme.colorScheme.error
            )
        }
...
        )

        Text(
            text = "Please select your avatar",
            style = MaterialTheme.typography.bodyLarge,
            modifier = Modifier.padding(16.dp)
                .testTag("avatar section title")
        )

        if(errorMessage != null){
            Text(
                text = errorMessage,
                style = MaterialTheme.typography.bodyMedium,
...
            if (LocalConfiguration.current.orientation == ORIENTATION_LANDSCAPE) {
                GridCells.Adaptive(minSize = 175.dp)
            } else GridCells.Fixed(3)

        LazyVerticalGrid(
            modifier = Modifier.padding(32.dp)
                .testTag("avatar grid"),
            columns = cellConfiguration,
            verticalArrangement = Arrangement.spacedBy(16.dp),
            horizontalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(avatarImageList) {
                AvatarItem(
...
            modifier = Modifier
                .height(60.dp)
                .fillMaxWidth()
        )

        Text(
            modifier = Modifier.testTag("theme section heading") ,
            text = "Please select your favourable theme",
            style = MaterialTheme.typography.bodyLarge,
            textAlign = TextAlign.Center
        )

        val themeList = listOf<ThemeItem>(
...
            )
        )
        LazyColumn(
            modifier = Modifier
                .fillMaxWidth()
                .padding(start = 16.dp, end = 16.dp, top = 32.dp)
                .testTag("theme lazy column"),
            contentPadding = PaddingValues(bottom = 16.dp)

        ) {
            items(themeList) { themeItem ->
                ThemeCardItem(
                    themeName = themeItem.themeName,
...
                .fillMaxWidth()
                .height(70.dp)
        )
        Text(
            text = "Please select your favourite genres",
            style = MaterialTheme.typography.bodyLarge,
            modifier = Modifier.padding(8.dp).testTag("genre heading")
        )
        if (chipSelectionError != null) {
            Text(
                text = chipSelectionError,
                style = MaterialTheme.typography.bodyMedium,
                modifier = Modifier.padding(top = 4.dp , bottom = 4.dp , start = 16.dp , end = 16.dp),
...
            } else {
                PaddingValues(start = 16.dp, bottom = 250.dp, top = 24.dp)
            }

        LazyHorizontalStaggeredGrid(

            modifier = Modifier.testTag("genre chips grid") ,
            rows = cellConfiguration,
            contentPadding = paddingValues,
            verticalArrangement = Arrangement.spacedBy(8.dp),
          //  horizontalArrangement = Arrangement.spacedBy(8.dp),
            flingBehavior = ScrollableDefaults.flingBehavior()
        ) {
...
