...
            .border(width = 2.dp, color = outlineColor, shape = RoundedCornerShape(10.dp))
            .width(intrinsicSize = IntrinsicSize.Max)
            .height(40.dp)
            .background(color = backgroundColor)
            .clickable {
                  onClick()
            }.testTag("rounded outlined button"),
        contentAlignment = Alignment.Center
    ) {
        Text(
            text = text.lowercase(),
            style = BookAppTypography.displayMedium,
            color = textColor ,
            modifier = Modifier.padding(bottom = 5.dp , start = 30.dp , end = 30.dp)
                .testTag("rounded button text")
        )
    }

}

@Composable
...
