...
                },
                shape = RoundedCornerShape(10.dp),
                colors = ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.secondary
                )
            ) {
                val buttonText = "finish"
                Text(text = buttonText, style = BookAppTypography.labelLarge)
            }
        }
    }

}
...
